test/arrays/bradc/errors/badArrArgErrMsg.good
Error: Unresolved call 'foo(:[] complex)' (badArrArgErrMsg.chpl:6)
  called from main (badArrArgErrMsg.chpl:???)
Candidates are:
  foo(X: [] real) (badArrArgErrMsg.chpl:8)
